[AOD-79] Fix Grid margin overflow
Negative margin was too big causing horizontal scrollbars due to overflow

--- a/app/components/shared/_config.scss
+++ b/app/components/shared/_config.scss
@@ -176,7 +176,7 @@ $box-shadow--crazy: 0 0 20px 1px rgba(0, 0, 0, .3);
 
 $grey-border: solid 1px color('grey', 'x-light');
 $background-color: color('blue', 'x-light');
-$grid-margin: 1rem;
+$grid-margin: unit('small');
 $nav-transition-time: .3s;
 $alert-color: color('red');
 
