--- a/app/topologies/Grid/Grid.scss
+++ b/app/topologies/Grid/Grid.scss
@@ -3,8 +3,8 @@
 .Grid {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -1em;
-  margin-right: -1em;
+  margin-left: -#{unit('small')};
+  margin-right: -#{unit('small')};
 }
 
 .Carousel {
@@ -15,8 +15,8 @@
 
 .Carousel__wrapper {
   position: relative;
-  margin-left: -1em;
-  margin-right: -1em;
+  margin-left: -#{unit('small')};
+  margin-right: -#{unit('small')};
 }
 
 .Carousel__gradient {
